<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cost_of_service"
        />
    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_question"
        android:checkedButton="@id/option_twenty_percent">
        <RadioButton
            android:id="@+id/option_twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_service" />

        <RadioButton
            android:id="@+id/option_eighteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_service" />

        <RadioButton
            android:id="@+id/option_fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_service" />

        <RadioButton
            android:id="@+id/option_ten_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_okay" />
        <RadioButton
            android:id="@+id/manual_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_tip"
            />
    </RadioGroup>
    <EditText
        android:id="@+id/insertManualTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/manual_tip_hint"
        android:visibility="invisible"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/tip_options"
        app:layout_constraintBottom_toTopOf="@id/number_of_person"
        android:autofillHints=""

        />

    <TextView
        android:id="@+id/number_of_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_people"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_options"/>

    <Button
        android:id="@+id/decrement_person"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/decrement"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_of_person"
        android:backgroundTint="@color/material_dynamic_secondary70"
        />
    <Button
        android:id="@+id/increment_person"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/increment"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/decrement_person"
        app:layout_constraintTop_toBottomOf="@+id/number_of_person"
        app:backgroundTint="?attr/colorControlActivated"/>

    <TextView
        android:id="@+id/number_of_person_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/one"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/number_of_person"
        app:layout_constraintStart_toEndOf="@id/increment_person"/>

    <Switch
        android:id="@+id/round_up_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/increment_person"
        app:layout_constraintTop_toBottomOf="@id/increment_person"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/round_up_tip"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/tip_welcome_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />

</androidx.constraintlayout.widget.ConstraintLayout>